# codexy

./: .gitignore  .pre-commit-config.yaml  README.md  README_ZH.md  pyproject.toml
codexy/: __init__.py  __main__.py  approvals.py  config.py  exceptions.py
codexy/cli/: completion_scripts.py  main.py
codexy/core/: agent.py
codexy/tools/: __init__.py  apply_diff_tool.py  apply_patch_tool.py  execute_command_tool.py  file_tools.py
codexy/tui/: __init__.py  app.py
codexy/tui/widgets/chat/: __init__.py  command_review.py  header.py  history_view.py  input_area.py  message_display.py  thinking_indicator.py
codexy/tui/widgets/overlays/: __init__.py  approval_overlay.py  help_overlay.py  history_overlay.py  model_overlay.py
codexy/utils/: __init__.py  filesystem.py  model_info.py  model_utils.py  security_check.py  storage.py  token_utils.py  update_checker.py
docs/: pre-commit.md  pre-commit_ZH.md
tests/: test_config.py
tests/core/: test_agent_compression.py
tests/tools/: test_apply_diff_tool.py  test_apply_patch_tool.py
tests/utils/: test_model_info.py
